--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "use-debounce": "^10.0.6"
+    "use-debounce": "^10.0.6",
+    "zod": "^4.3.5"
   },
   "optionalDependencies": {
     "lightningcss-linux-x64-gnu": "^1.28.2",
