--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.26.2",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lightningcss": "^1.28.2",
