Fix: add connection pooling to build script for Clever Cloud

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate && npx prisma migrate deploy && next build",
+    "build": "node scripts/build.js",
     "build:local": "npx prisma generate && next build",
     "start": "node scripts/start.js",
     "lint": "eslint"
