--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
     "eslint-config-next": "15.1.9"
   },
   "prisma": {
-    "seed": "node prisma/seed.js"
+    "seed": "npx tsx scripts/seed-full-catalog.ts"
   }
 }
